network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-deny-all-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
